--- a/app/src/main/res/layout/activity_coin_detail.xml
+++ b/app/src/main/res/layout/activity_coin_detail.xml
@@ -1,175 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.CoinDetailActivity">
-
-    <ImageView
-        android:id="@+id/ivLogoCoinDetail"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_margin="16dp"
-        android:contentDescription="@string/coin_logo_description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@mipmap/ic_launcher" />
-
-    <TextView
-        android:id="@+id/tvFromSymbol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textColor="@android:color/holo_purple"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
-        app:layout_constraintEnd_toStartOf="@id/tvSlash"
-        app:layout_constraintTop_toTopOf="@id/tvSlash"
-        tools:text="BTC" />
-
-    <TextView
-        android:id="@+id/tvSlash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivLogoCoinDetail"
-        tools:text="/" />
-
-    <TextView
-        android:id="@+id/tvToSymbol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textColor="@android:color/holo_blue_light"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
-        app:layout_constraintStart_toEndOf="@id/tvSlash"
-        app:layout_constraintTop_toTopOf="@id/tvSlash"
-        tools:text="BTC" />
-
-
-    <TextView
-        android:id="@+id/tvPriceLabel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/price_label"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvSlash" />
-
-    <TextView
-        android:id="@+id/tvPrice"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvPriceLabel"
-        app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
-        app:layout_constraintTop_toTopOf="@id/tvPriceLabel"
-        tools:text="7000"/>
-
-    <TextView
-        android:id="@+id/tvMinPriceLabel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/min_price_label"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />
-
-    <TextView
-        android:id="@+id/tvMinPrice"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvMinPriceLabel"
-        app:layout_constraintStart_toEndOf="@id/tvMinPriceLabel"
-        app:layout_constraintTop_toTopOf="@id/tvMinPriceLabel"
-        tools:text="7000"/>
-
-    <TextView
-        android:id="@+id/tvMaxPriceLabel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/min_price_label"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />
-
-    <TextView
-        android:id="@+id/tvMaxPrice"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textColor="@android:color/holo_green_light"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvMaxPriceLabel"
-        app:layout_constraintStart_toEndOf="@id/tvMaxPriceLabel"
-        app:layout_constraintTop_toTopOf="@id/tvMaxPriceLabel"
-        tools:text="7000"/>
-
-    <TextView
-        android:id="@+id/tvLastMarketLabel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/last_market_label"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />
-
-    <TextView
-        android:id="@+id/tvLastMarket"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvLastMarketLabel"
-        app:layout_constraintStart_toEndOf="@id/tvLastMarketLabel"
-        app:layout_constraintTop_toTopOf="@id/tvLastMarketLabel"
-        tools:text="Bitfinex"/>
-
-    <TextView
-        android:id="@+id/tvLastUpdateLabel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/last_update_label"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel" />
-
-    <TextView
-        android:id="@+id/tvLastUpdate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvLastUpdateLabel"
-        app:layout_constraintStart_toEndOf="@id/tvLastUpdateLabel"
-        app:layout_constraintTop_toTopOf="@id/tvLastUpdateLabel"
-        tools:text="20:00:00"/>
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".presentation.CoinDetailActivity" />
